# tree-sitter-winscp

./: Cargo.toml  binding.gyp  comment-world.txt  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
examples/: 001.winscp  002.winscp  003.winscp  004.winscp  005.winscp  006.winscp  007.winscp  008.winscp  009.winscp  010.winscp  011.winscp  012.winscp  013.winscp  014.winscp  015.winscp  016.winscp  017.winscp  018.winscp  019.winscp  020.winscp
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: commands.txt  comments.txt  example-01.txt
